# career_recommendation_system

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
career_recommendation_system_mansi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data/: careers.json  user_profiles.json
database/: career_repository.py  connection.py  setup.py
models/: business_career.py  career.py  creative_career.py  engineering_career.py  medical_career.py  tech_career.py  user.py
persistence/: serializer.py
services/: auth.py  quiz.py  recommendation_engine.py  report_generator.py
