[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "career-recommendation-system-mansi"
version = "1.0.0"
description = "A Python Career Recommendation System using OOP, JSON and SQLite"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "MANSI", email = "mansisharma23005@gmail.com"}
]

[tool.setuptools]
packages = [
    "models",
    "services",
    "database",
    "persistence"
]